ajout section SoftSkills + passage de langu-sect à skills-sect

--- a/assets/language/lang.data.json
+++ b/assets/language/lang.data.json
@@ -48,8 +48,8 @@
         "en": "I am a fullstack developer, so I principally make website but I can also make desktop application, and I currently learn to make mobile application.<br> To video games player, I also make Discord bot and I will soon learn to how to make a video game."
     },
     "btnGoToMySkills": {
-        "fr": "Mes languages",
-        "en": "My languages"
+        "fr": "Aller à la section skills",
+        "en": "Go to skills section"
     },
     "titleMyProjects": {
         "fr": "Mes projets",
@@ -59,13 +59,17 @@
         "fr": "Certains de mes projets actuels sont listés dans la <a href=\"#work-sect\">section réalisations</a>.<br> J'ai également des projets personnels que je suis en train de développer, comme une plateforme musicale liée à un bot Discord, ou des sites web personnels pour un serveur FiveM.<br> Je travaille également pour des petites entreprises, et je peux attendre un nouveau client. Toutes les informations à ce sujet sont présentes sur mon site web : <a target=\"_blank\" href=\"https://blms.fr/\">Bloom's Studio</a><br> Je travaille sur beaucoup de projets, que vous pouvez accéder dans cette liste sur mon site web : <a href=\"https://project.blms.fr/exper/\" target=\"_blank\">Bloom's Studio - Project</a>.",
         "en": "Some of my current projects are listed in the <a href=\"#work-sect\">work section</a>.<br> I also have somes personals projects that I am currently developing, like a music platform linked to a Discord bot, or somes personals websites for a FiveM server.<br> I work for small company too, and I can wait for a new customer. All informations about that is present on my website : <a target=\"_blank\" href=\"https://blms.fr/\">Bloom's Studio</a><br> I work on a lot of projects, that you can access in this list in my website : <a href=\"https://project.blms.fr/exper/\" target=\"_blank\">Bloom's Studio - Project</a>."
     },
-    "titleMyLanguage": {
-        "fr": "Mes langues",
-        "en": "My languages"
+    "titleMySkillsSect": {
+        "fr": "Mes skills",
+        "en": "My skills"
     },
-    "constantlyLearning": {
-        "fr": "Site web ou application de bureau. Je suis constamment en train d'apprendre pour améliorer mes connaissances",
-        "en": "Website or Desktop application. I'm constantly learning to improve my knowledge"
+    "mySkillsSectDesc": {
+        "fr": "Je suis un developpeur fullstack, donc j'ai beaucoup de compétences dans différents languages",
+        "en": "I am a fullstack developer, so I have a lot of skills in differents languages"
+    },
+    "titleMySoftSkillsSect": {
+        "fr": "Mes soft skills",
+        "en": "My soft skills"
     },
     "titleMyWorks": {
         "fr": "Mes réalisations",
