ajout myExpe page

--- a/assets/language/lang.data.json
+++ b/assets/language/lang.data.json
@@ -105,7 +105,7 @@
     },
     "btnGoToAllMyWorks": {
         "fr": "Voir toutes mes réalisations",
-        "en": "Check all my public works"
+        "en": "Check all my works"
     },
     "schoolDateAragonPicasso": {
         "fr": "Septembre 2019 - Juin 2022",
